fixing spacing on footer

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -9,6 +9,9 @@
 
 }
 
+.name {
+    justify-content: space-evenly;
+}
 
 .gitIcon {
     margin-right: 100px;
@@ -39,6 +42,6 @@
 }
 
 .icon-row {
-    margin-top: 0;
-    ;
+    margin-top: -10px;
+    justify-content: center;
 }
